# dsetgen

./: README.md  __init__.py  config.py  exceptions.py  install_requirements.sh  pyproject.toml  requirements.txt
core/: pipeline_controller.py  registry.py
dsetgen.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ingestion/: __init__.py  abstract_ingestor.py  security.py
ingestion/handlers/: __init__.py  csv_ingestor.py  docx_ingestor.py  html_ingestor.py  json_ingestor.py  md_ingestor.py  pdf_ingestor.py  txt_ingestor.py
llm/: __init__.py  abstract_adapter.py  ollama_adapter.py  openai_adapter.py
output/: __init__.py  base_formatter.py  huggingface_formatter.py  jsonl_formatter.py
processing/: __init__.py  chunker.py  metadata.py  normalizer.py
state/: __init__.py  checkpoint.py
tests/: __init__.py
utils/: __init__.py  logging.py
